--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="courses-image">
                   <img src="assets/img/youtube-banner.png" alt="img" />
                   <a
-                    href="https://www.youtube.com/watch?v=Cn4G2lZ_g2I"
+                    href="https://www.youtube.com/watch?v=1HIA8RkuTUE&ab_channel=NgXoftAcademy"
                     class="video-btn ripple video-popup"
                   >
                     <i class="fas fa-play"></i>
